# CosKit

./: .gitignore  CLAUDE.md  LICENSE  README.md  build_mac.sh  build_win.bat  example.txt  package-lock.json  package.json
.github/workflows/: build.yml
docs/: AGENT_WORKFLOW.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  FRONTEND.md  README.md  REVIEW_AGENT.md  SKILLS.md
src/: app.js  index.html  mask-editor.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dotenv.rs  engine.rs  gemini_client.rs  image_utils.rs  lib.rs  main.rs  models.rs  openai_client.rs  planner.rs  reviewer.rs  settings.rs  skills.rs  workflow.rs
src-tauri/tests/: layers_e2e.rs  layers_test.rs  mask_verify.rs
