[package]
name = "coskit"
version = "0.0.8"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
image = "0.25"
kamadak-exif = "0.6"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
