[package]
name = "coskit"
version = "0.1.1"
edition = "2021"

[lib]
name = "coskit"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
image = "0.25"
kamadak-exif = "0.6"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
